--- a/end_to_end.ipynb
+++ b/end_to_end.ipynb
@@ -70,7 +70,7 @@
       "metadata": {
         "id": "vt0DGW8oWLzf",
         "colab_type": "code",
-        "outputId": "ad3ccf91-cabe-4708-fc00-dd18b3d4efef",
+        "outputId": "657503d1-14c7-4864-fe41-2afbc45f33d8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -88,15 +88,15 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x7f2c386458d0>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f2c3799cd30>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f2c3795c320>],\n",
-              "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f2c3790a8d0>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f2c3793ce80>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f2c378f7470>],\n",
-              "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f2c378a8a20>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f2c3785bfd0>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f2c37869080>]],\n",
+              "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x7ff2c7ed5908>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7ff2c721cd30>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7ff2c71db320>],\n",
+              "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7ff2c71888d0>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7ff2c71bce80>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7ff2c7177470>],\n",
+              "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7ff2c7127a20>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7ff2c70dcfd0>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7ff2c70ea080>]],\n",
               "      dtype=object)"
             ]
           },
@@ -124,10 +124,10 @@
       "metadata": {
         "id": "XHnQpYsCxqFo",
         "colab_type": "code",
-        "outputId": "94648ad5-9909-4de8-9bee-648192c8da18",
+        "outputId": "237ce721-c183-4dc1-9da1-988daa017dea",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 272
+          "height": 277
         }
       },
       "source": [
@@ -211,10 +211,10 @@
       "metadata": {
         "id": "hmz6-PfQxx8r",
         "colab_type": "code",
-        "outputId": "cb589ac0-9a53-4af7-992a-e529133ede76",
+        "outputId": "eb95aedc-1f6f-4756-859e-9a39bb962d44",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 282
+          "height": 283
         }
       },
       "source": [
@@ -226,7 +226,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7f2c27b706a0>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7ff2b73ee5c0>"
             ]
           },
           "metadata": {
@@ -314,10 +314,10 @@
       "metadata": {
         "id": "BzrE6XiU07pE",
         "colab_type": "code",
-        "outputId": "47318934-8420-4e7e-c0e6-bcbc9df3dd59",
+        "outputId": "1c9d51aa-eee7-4d05-b796-1cc2f9e8aae7",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 286
+          "height": 287
         }
       },
       "source": [
@@ -331,7 +331,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.colorbar.Colorbar at 0x7f2c23d7a0b8>"
+              "<matplotlib.colorbar.Colorbar at 0x7ff2b35fb0b8>"
             ]
           },
           "metadata": {
@@ -371,10 +371,10 @@
       "metadata": {
         "id": "hVWhqDtY4eqJ",
         "colab_type": "code",
-        "outputId": "492e9ee3-3ecf-4d3d-a101-c752c78256a8",
+        "outputId": "4f2f5d04-8137-4b95-c788-96f553c8a2d1",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 187
+          "height": 191
         }
       },
       "source": [
@@ -410,10 +410,10 @@
       "metadata": {
         "id": "oVs706DwQxwz",
         "colab_type": "code",
-        "outputId": "9daa5d42-bfc3-4278-b44b-650e23f17117",
+        "outputId": "a1d29a55-1f66-448a-98d3-7f1094d05b6a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 807
+          "height": 833
         }
       },
       "source": [
@@ -427,22 +427,22 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x7f2c2789ffd0>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f2c23ceedd8>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f2c23d2c3c8>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f2c23cdb978>],\n",
-              "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f2c23c8ef28>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f2c23c4a518>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f2c23bf96d8>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f2c23c2ccc0>],\n",
-              "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f2c23c2ccf8>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f2c23b9a828>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f2c23b4bdd8>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f2c23b0a3c8>],\n",
-              "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f2c23aba978>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f2c23a6df28>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f2c23aa8518>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f2c23a5bac8>]],\n",
+              "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x7ff2b3619978>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7ff2b356fd68>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7ff2b352d320>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7ff2b355c8d0>],\n",
+              "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7ff2b350ee80>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7ff2b34cc470>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7ff2b347a630>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7ff2b342dc18>],\n",
+              "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7ff2b342dc50>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7ff2b341b780>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7ff2b33ccd30>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7ff2b338a320>],\n",
+              "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7ff2b333c8d0>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7ff2b32ede80>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7ff2b3329470>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7ff2b32dca20>]],\n",
               "      dtype=object)"
             ]
           },
@@ -485,10 +485,10 @@
       "metadata": {
         "id": "UUTIA3V1Vfc5",
         "colab_type": "code",
-        "outputId": "0e4a6616-1af2-4d4a-f965-e1317f7601c6",
+        "outputId": "d8207ac4-0ecf-458d-a919-76af9cd761ad",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 238
+          "height": 243
         }
       },
       "source": [
@@ -568,10 +568,10 @@
       "metadata": {
         "id": "bTCTDmt0kR17",
         "colab_type": "code",
-        "outputId": "2ef272dc-bd78-4a19-8fe4-94e66f954943",
+        "outputId": "24074817-b72f-471f-9db3-d337af51ddeb",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 51
+          "height": 52
         }
       },
       "source": [
@@ -626,10 +626,10 @@
       "metadata": {
         "id": "XkIat1jwlm2p",
         "colab_type": "code",
-        "outputId": "ae991ad8-9716-4932-a6f5-44f666f2264e",
+        "outputId": "fb3c1be2-0e41-4016-9f9f-7eccc3921296",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 35
         }
       },
       "source": [
@@ -660,10 +660,10 @@
       "metadata": {
         "id": "7YhT13-5l-1K",
         "colab_type": "code",
-        "outputId": "4aad8f30-6e3f-46c8-d7bd-57a144d38820",
+        "outputId": "b1014aa4-5b10-472d-885c-cd508494b74a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 105
+          "height": 107
         }
       },
       "source": [
@@ -795,17 +795,17 @@
       "metadata": {
         "id": "MHufDkmUTSJD",
         "colab_type": "code",
+        "outputId": "f05984c1-9bee-457d-8038-0df99bb5eeeb",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 238
-        },
-        "outputId": "37848dec-a128-46c6-e22b-085fb8e4f064"
+          "height": 243
+        }
       },
       "source": [
         "housing_prep = full_pipline.fit_transform(housing)\n",
         "housing_prep"
       ],
-      "execution_count": 68,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -829,7 +829,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 68
+          "execution_count": 33
         }
       ]
     },
@@ -841,7 +841,21 @@
         "colab": {}
       },
       "source": [
-        ""
+        "################ Trainning the model ####################"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vEyUtlwbIjUm",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.linear_model import LinearRegression\n",
+        "lin_reg = LinearRegression()"
       ],
       "execution_count": 0,
       "outputs": []
