--- a/classification.ipynb
+++ b/classification.ipynb
@@ -58,6 +58,7 @@
         "colab": {}
       },
       "source": [
+        "import numpy as np\n",
         "X=mnist[\"data\"]\n",
         "Y=mnist['target']\n",
         "Y=np.asarray([int(y) for y in Y])"
@@ -98,11 +99,11 @@
       "metadata": {
         "id": "a1KE5FIr0kiF",
         "colab_type": "code",
+        "outputId": "720ffb65-0910-49c1-fd29-40dfc6709871",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 214
-        },
-        "outputId": "8d051c5f-6be1-4515-e509-4744594c42ff"
+          "height": 121
+        }
       },
       "source": [
         "y_train_5=(Y_train==5)\n",
@@ -111,52 +112,26 @@
         "from sklearn.linear_model import SGDClassifier\n",
         "import random\n",
         "sgd_clf=SGDClassifier(random_state=42)\n",
-        "sgd_clf.fit(X_train,y_train_5)\n",
-        "digit_index=random.randrange(1,60001,1)"
+        "sgd_clf.fit(X_train,y_train_5)"
       ],
-      "execution_count": 35,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-35-e4c7e0dbc8b0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0msgd_clf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my_train_5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mdigit_index\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m60001\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mdigit\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mdigit_index\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0msgd_clf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mdigit\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'x' is not defined"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "J46mmhbB41CK",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "18532e37-9905-462a-e1dd-316b2375dda8"
-      },
-      "source": [
-        "digit=X_train[digit_index]\n",
-        "sgd_clf.predict([digit])"
-      ],
-      "execution_count": 37,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([False])"
+              "SGDClassifier(alpha=0.0001, average=False, class_weight=None,\n",
+              "              early_stopping=False, epsilon=0.1, eta0=0.0, fit_intercept=True,\n",
+              "              l1_ratio=0.15, learning_rate='optimal', loss='hinge',\n",
+              "              max_iter=1000, n_iter_no_change=5, n_jobs=None, penalty='l2',\n",
+              "              power_t=0.5, random_state=42, shuffle=True, tol=0.001,\n",
+              "              validation_fraction=0.1, verbose=0, warm_start=False)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 37
+          "execution_count": 11
         }
       ]
     },
@@ -164,6 +139,127 @@
       "cell_type": "code",
       "metadata": {
         "id": "fQeIf6DC42jy",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "###############Testing Model Accuracy##########################"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eFGHj7VH3_vg",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 69
+        },
+        "outputId": "82653927-1f92-4981-94e7-fe268689cf3c"
+      },
+      "source": [
+        "from sklearn.model_selection import StratifiedKFold\n",
+        "from sklearn.base import clone\n",
+        "\n",
+        "skfolds=StratifiedKFold(n_splits=3,random_state=42)\n",
+        "for train_index,test_index in skfolds.split(X_train,y_train_5):\n",
+        "  clone_clf = clone(sgd_clf)\n",
+        "  X_train_folds = X_train[train_index]\n",
+        "  y_train_folds = (y_train_5[train_index])\n",
+        "  X_test_fold = X_train[test_index]\n",
+        "  y_test_fold = (y_train_5[test_index])\n",
+        "  clone_clf.fit(X_train_folds,y_train_folds)\n",
+        "  y_pred = clone_clf.predict(X_test_fold)\n",
+        "  n_correct = sum(y_pred==y_test_fold)\n",
+        "  print(n_correct/len(y_pred))"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0.96275\n",
+            "0.9681\n",
+            "0.95155\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Cu187G6M7IFd",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "5c1f5111-9b2d-45d4-9258-206ff2d9f647"
+      },
+      "source": [
+        "from sklearn.model_selection import cross_val_score\n",
+        "cross_val_score(sgd_clf,X_train,y_train_5,cv=3,scoring='accuracy')"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0.96275, 0.9681 , 0.95155])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zEQyMtN8rxUc",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "92e7373b-5d64-498c-b855-d101a62f8fd9"
+      },
+      "source": [
+        "from sklearn.base import BaseEstimator\n",
+        "class Never5Classifier(BaseEstimator):\n",
+        "  def fit(self,X,y=None):\n",
+        "    pass\n",
+        "  def predict(self,X):\n",
+        "    return np.zeros((len(X),1),dtype=bool)\n",
+        "never_5_clf = Never5Classifier()\n",
+        "cross_val_score(never_5_clf,X_train,y_train_5,cv=3,scoring=\"accuracy\")"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0.90995, 0.90775, 0.91125])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4D3MAOhushjI",
         "colab_type": "code",
         "colab": {}
       },
