--- a/classification.ipynb
+++ b/classification.ipynb
@@ -114,10 +114,10 @@
       "metadata": {
         "id": "a1KE5FIr0kiF",
         "colab_type": "code",
-        "outputId": "9e6615ca-4cf5-4f37-a3d0-1c104091c647",
+        "outputId": "d605e98c-012a-4a81-ef7b-6aababc0ef94",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 141
+          "height": 121
         }
       },
       "source": [
@@ -190,7 +190,7 @@
         "  n_correct = sum(y_pred==y_test_fold)\n",
         "  print(n_correct/len(y_pred))"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -218,7 +218,7 @@
         "from sklearn.model_selection import cross_val_score\n",
         "cross_val_score(sgd_clf,X_train,y_train_5,cv=3,scoring='accuracy')"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -255,7 +255,7 @@
         "never_5_clf = Never5Classifier()\n",
         "cross_val_score(never_5_clf,X_train,y_train_5,cv=3,scoring=\"accuracy\")"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -288,7 +288,7 @@
         "from sklearn.metrics import confusion_matrix\n",
         "confusion_matrix(y_train_5,y_train_pred)"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -321,7 +321,7 @@
         "print(precision_score(y_train_5,y_train_pred))\n",
         "print(recall_score(y_train_5,y_train_pred))"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -348,7 +348,7 @@
         "from sklearn.metrics import f1_score\n",
         "f1_score(y_train_5,y_train_pred)"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -401,7 +401,7 @@
         "plot_precision_recall_vs_threshold(precisions,recalls,thresholds)\n",
         "plt.show()"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -422,11 +422,11 @@
       "metadata": {
         "id": "azGWwe7Sc9hS",
         "colab_type": "code",
+        "outputId": "f293b5c4-e8bd-4224-bee4-d1ec11fa65d2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 283
-        },
-        "outputId": "f293b5c4-e8bd-4224-bee4-d1ec11fa65d2"
+        }
       },
       "source": [
         "from sklearn.metrics import roc_curve\n",
@@ -441,7 +441,7 @@
         "plot_roc_curve(fpr,tpr)\n",
         "plt.show()"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -462,17 +462,17 @@
       "metadata": {
         "id": "rb9jhA0EHp2V",
         "colab_type": "code",
+        "outputId": "5afe6412-abfc-4dcf-abdc-cc64267bb9c4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "5afe6412-abfc-4dcf-abdc-cc64267bb9c4"
+        }
       },
       "source": [
         "from sklearn.metrics import roc_auc_score\n",
         "roc_auc_score(y_train_5,y_scores)"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -493,11 +493,11 @@
       "metadata": {
         "id": "_r-9v8U_IJYc",
         "colab_type": "code",
+        "outputId": "b418a059-666f-4df1-ed22-48e5a54f9f96",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 407
-        },
-        "outputId": "b418a059-666f-4df1-ed22-48e5a54f9f96"
+        }
       },
       "source": [
         "from sklearn.ensemble import RandomForestClassifier\n",
@@ -510,7 +510,7 @@
         "plt.legend(loc=\"lower right\")\n",
         "plt.show()"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -547,6 +547,208 @@
       },
       "source": [
         "##############################MultiClass Classification###########################"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rq0nOwolRJEh",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "ef736be3-d963-4dfa-ad2a-9600207f4042"
+      },
+      "source": [
+        "sgd_clf.fit(X_train,Y_train)\n",
+        "sgd_clf.classes_"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vEzR84QhUMhg",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 193
+        },
+        "outputId": "509a68d3-6c47-45ee-c08a-7b55b7665c57"
+      },
+      "source": [
+        "forest_clf = RandomForestClassifier()\n",
+        "forest_clf.fit(X_train,Y_train)"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/sklearn/ensemble/forest.py:245: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n",
+            "  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
+              "                       max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
+              "                       min_impurity_decrease=0.0, min_impurity_split=None,\n",
+              "                       min_samples_leaf=1, min_samples_split=2,\n",
+              "                       min_weight_fraction_leaf=0.0, n_estimators=10,\n",
+              "                       n_jobs=None, oob_score=False, random_state=None,\n",
+              "                       verbose=0, warm_start=False)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GUghd29wRpS2",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 193
+        },
+        "outputId": "a25d86ac-1350-44a5-9714-941fa2410bde"
+      },
+      "source": [
+        "from sklearn.multiclass import OneVsOneClassifier\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "forest_clf = RandomForestClassifier()\n",
+        "ovo_clf = OneVsOneClassifier(SGDClassifier(random_state=42))\n",
+        "ovo_clf.fit(X_train,Y_train)\n",
+        "forest_clf.fit(X_train,Y_train)"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/sklearn/ensemble/forest.py:245: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n",
+            "  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
+              "                       max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
+              "                       min_impurity_decrease=0.0, min_impurity_split=None,\n",
+              "                       min_samples_leaf=1, min_samples_split=2,\n",
+              "                       min_weight_fraction_leaf=0.0, n_estimators=10,\n",
+              "                       n_jobs=None, oob_score=False, random_state=None,\n",
+              "                       verbose=0, warm_start=False)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5AcDWT7kTEbH",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "bbbe3e3a-bfcc-4bfc-f693-b950b35ab3d5"
+      },
+      "source": [
+        "from sklearn.model_selection import cross_val_score\n",
+        "cross_val_score(sgd_clf,X_train,Y_train,cv=3,scoring=\"accuracy\")"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0.8739752 , 0.87484374, 0.85512827])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4LN3QFrqUsQh",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "e689baf9-4cee-4a02-b03c-a456f92569a5"
+      },
+      "source": [
+        "from sklearn.preprocessing import StandardScaler\n",
+        "scaler = StandardScaler()\n",
+        "X_train_scaled=scaler.fit_transform(X_train.astype(np.float64))\n",
+        "cross_val_score(sgd_clf,X_train_scaled,Y_train,cv=3,scoring=\"accuracy\")"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0.89597081, 0.89949497, 0.90093514])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "c29j3bFfWT_S",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
