--- a/Training.ipynb
+++ b/Training.ipynb
@@ -525,32 +525,14 @@
       "metadata": {
         "id": "kHkRV4joVcMv",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "58ecabb9-b414-4eb2-8394-5118ffd01f80"
+        "colab": {}
       },
       "source": [
         "from sklearn import datasets\n",
-        "iris = datasets.load_iris()\n",
-        "list(iris.keys())"
+        "iris = datasets.load_iris()"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['data', 'target', 'target_names', 'DESCR', 'feature_names', 'filename']"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 1
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -583,18 +565,18 @@
       "metadata": {
         "id": "8P4a9aPDieRA",
         "colab_type": "code",
+        "outputId": "1af9be27-91f9-4185-d184-9ebff69559f8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 124
-        },
-        "outputId": "1af9be27-91f9-4185-d184-9ebff69559f8"
+        }
       },
       "source": [
         "from sklearn.linear_model import LogisticRegression\n",
         "logreg=LogisticRegression()\n",
         "logreg.fit(X,y)"
       ],
-      "execution_count": 23,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -619,11 +601,11 @@
       "metadata": {
         "id": "O-06Jd12ixm9",
         "colab_type": "code",
+        "outputId": "47fe6dc0-9ebe-4973-9916-b85ffb72296a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 283
-        },
-        "outputId": "47fe6dc0-9ebe-4973-9916-b85ffb72296a"
+        }
       },
       "source": [
         "X_new=np.linspace(0,3,1000).reshape(-1,1)\n",
@@ -631,7 +613,7 @@
         "plt.plot(X_new,y_proba[:,1],\"g\",label=\"Virgininca\")\n",
         "plt.plot(X_new,y_proba[:,0],\"b--\",label=\"Not Virginica\")"
       ],
-      "execution_count": 28,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -660,9 +642,204 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mU455aq8onBV",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Softmax Regression"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "lcc0LTZBi_zq",
+        "id": "GJLG4Jxaoz36",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 124
+        },
+        "outputId": "23478340-1291-4072-f001-63baf84fed28"
+      },
+      "source": [
+        "from sklearn.linear_model import LogisticRegression\n",
+        "X = iris[\"data\"][:,(2,3)]\n",
+        "y=iris[\"target\"]\n",
+        "softmax = LogisticRegression(multi_class=\"multinomial\",solver=\"lbfgs\",C=10)\n",
+        "softmax.fit(X,y)"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "LogisticRegression(C=10, class_weight=None, dual=False, fit_intercept=True,\n",
+              "                   intercept_scaling=1, l1_ratio=None, max_iter=100,\n",
+              "                   multi_class='multinomial', n_jobs=None, penalty='l2',\n",
+              "                   random_state=None, solver='lbfgs', tol=0.0001, verbose=0,\n",
+              "                   warm_start=False)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "B3SVX_5ir1xt",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "57aa28be-d774-436d-e9cf-ad5457747a99"
+      },
+      "source": [
+        "softmax.predict([[5,2]])"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([2])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2RMPdMWnr6L_",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "8d755e8f-953c-42c4-9488-c6e3bee1af9c"
+      },
+      "source": [
+        "softmax.predict_proba([[5,2]])"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[6.38014896e-07, 5.74929995e-02, 9.42506362e-01]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "h6c2anH4r-EK",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        },
+        "outputId": "c56e0adc-f2b6-4bca-f10a-3efb3f0bae39"
+      },
+      "source": [
+        "print(iris[\"DESCR\"])"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            ".. _iris_dataset:\n",
+            "\n",
+            "Iris plants dataset\n",
+            "--------------------\n",
+            "\n",
+            "**Data Set Characteristics:**\n",
+            "\n",
+            "    :Number of Instances: 150 (50 in each of three classes)\n",
+            "    :Number of Attributes: 4 numeric, predictive attributes and the class\n",
+            "    :Attribute Information:\n",
+            "        - sepal length in cm\n",
+            "        - sepal width in cm\n",
+            "        - petal length in cm\n",
+            "        - petal width in cm\n",
+            "        - class:\n",
+            "                - Iris-Setosa\n",
+            "                - Iris-Versicolour\n",
+            "                - Iris-Virginica\n",
+            "                \n",
+            "    :Summary Statistics:\n",
+            "\n",
+            "    ============== ==== ==== ======= ===== ====================\n",
+            "                    Min  Max   Mean    SD   Class Correlation\n",
+            "    ============== ==== ==== ======= ===== ====================\n",
+            "    sepal length:   4.3  7.9   5.84   0.83    0.7826\n",
+            "    sepal width:    2.0  4.4   3.05   0.43   -0.4194\n",
+            "    petal length:   1.0  6.9   3.76   1.76    0.9490  (high!)\n",
+            "    petal width:    0.1  2.5   1.20   0.76    0.9565  (high!)\n",
+            "    ============== ==== ==== ======= ===== ====================\n",
+            "\n",
+            "    :Missing Attribute Values: None\n",
+            "    :Class Distribution: 33.3% for each of 3 classes.\n",
+            "    :Creator: R.A. Fisher\n",
+            "    :Donor: Michael Marshall (MARSHALL%PLU@io.arc.nasa.gov)\n",
+            "    :Date: July, 1988\n",
+            "\n",
+            "The famous Iris database, first used by Sir R.A. Fisher. The dataset is taken\n",
+            "from Fisher's paper. Note that it's the same as in R, but not as in the UCI\n",
+            "Machine Learning Repository, which has two wrong data points.\n",
+            "\n",
+            "This is perhaps the best known database to be found in the\n",
+            "pattern recognition literature.  Fisher's paper is a classic in the field and\n",
+            "is referenced frequently to this day.  (See Duda & Hart, for example.)  The\n",
+            "data set contains 3 classes of 50 instances each, where each class refers to a\n",
+            "type of iris plant.  One class is linearly separable from the other 2; the\n",
+            "latter are NOT linearly separable from each other.\n",
+            "\n",
+            ".. topic:: References\n",
+            "\n",
+            "   - Fisher, R.A. \"The use of multiple measurements in taxonomic problems\"\n",
+            "     Annual Eugenics, 7, Part II, 179-188 (1936); also in \"Contributions to\n",
+            "     Mathematical Statistics\" (John Wiley, NY, 1950).\n",
+            "   - Duda, R.O., & Hart, P.E. (1973) Pattern Classification and Scene Analysis.\n",
+            "     (Q327.D83) John Wiley & Sons.  ISBN 0-471-22361-1.  See page 218.\n",
+            "   - Dasarathy, B.V. (1980) \"Nosing Around the Neighborhood: A New System\n",
+            "     Structure and Classification Rule for Recognition in Partially Exposed\n",
+            "     Environments\".  IEEE Transactions on Pattern Analysis and Machine\n",
+            "     Intelligence, Vol. PAMI-2, No. 1, 67-71.\n",
+            "   - Gates, G.W. (1972) \"The Reduced Nearest Neighbor Rule\".  IEEE Transactions\n",
+            "     on Information Theory, May 1972, 431-433.\n",
+            "   - See also: 1988 MLC Proceedings, 54-64.  Cheeseman et al\"s AUTOCLASS II\n",
+            "     conceptual clustering system finds 3 classes in the data.\n",
+            "   - Many, many more ...\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "s4TBcYUCslsg",
         "colab_type": "code",
         "colab": {}
       },
